Improved code based on code review